fix slidenumbers not showing and fix(?) table styling for handouts

--- a/resource/support/css/decker.css
+++ b/resource/support/css/decker.css
@@ -831,6 +831,7 @@ dd {
 }
 
 .reveal .slide-number {
+  position: fixed;
   width: 100%;
   text-align: center;
   background: transparent;
